--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./api/bin/www",
     "dev": "DEBUG=server:* nodemon ./api/bin/www",
     "dev-windows": "nodemon ./api/bin/www",
-    "netlify-build": "./build.sh"
+    "build": "./build.sh"
   },
   "engines": {
     "node": "10.15.3"
